backend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: backend-deployment 
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: backend 
  template: 
    metadata: 
      labels: 
        app: backend 
    spec: 
      containers: 
        - name: backend 
          image: gcr.io/modern-spirit-475318-r3/backend:latest 
          ports: 
            - containerPort: 8080
